<resources>
    <string name="app_name">Lunch for you</string>
    <string name="login" translatable="false">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="mail" translatable="false">Mail</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="history">History</string>
    <string name="todayOrders">Today orders</string>
    <string name="messages">Messages</string>
    <string name="restaurantInfo">Restaurant info</string>
    <string name="contact">Contact</string>
    <string name="settings">Settings</string>
    <string name="addNewRestaurant">Add new Restaurant</string>
    <string name="addWithQRCode">Add with QR code</string>
    <string name="restaurantCode">Restaurant code</string>
    <string name="code">Code</string>
    <string name="addWithRestaurantCode">Add with restaurant code</string>
    <string name="address">Address</string>
    <string name="openingHours">Opening hours</string>
    <string name="back">Back</string>
    <string name="today">Today</string>
    <string name="add_note">Add note</string>
    <string name="save">Save</string>
    <string name="extendSubscription">Extend subscription</string>
    <string name="summary">Summary</string>
    <string name="activeSubscribers">Active subscribers</string>
    <string name="newSubscribersThisMonth">New subscribers (this month)</string>
    <string name="lostSubscribersThisMonth">Lost subscribers (this month)</string>
    <string name="allSubscribers">All subscribers</string>
    <string name="subscribers">Subscribers</string>
    <string name="subscriptionSince">Subscription since:</string>
    <string name="daysRemain">Days remain</string>
    <string name="restaurantName">Restaurant Name</string>
    <string name="subscriptionPrice">Subscription price</string>
    <string name="order">Order</string>
    <string name="note">Note</string>
    <string name="status">Status</string>
    <string name="ordersHistory">Orders history</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="pleaseEnterValidLoginDetails">Please enter valid login details</string>
    <string name="check_my_location">Check my location</string>
    <string name="error">Error</string>
    <string name="registration_failure">Registration failure</string>
    <string name="passwords_are_not_the_same">Passwords are not the same</string>
    <string name="password_must_be_at_least_8_characters">Password must have at least 8 characters</string>
    <string name="email_is_not_correct">Email is not correct</string>
    <string name="login_failure">Login failure</string>
    <string name="enter_login_and_password">Enter your login and password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="personal_data">Personal data</string>
    <string name="welcome">Welcome!</string>
    <string name="add_your_favourite_restaurant">Add your favourite restaurant</string>
    <string name="restaunat_code">Restaurant code</string>
    <string name="logout">Logout</string>
    <string name="personal_data_saved">Personal data saved</string>
    <string name="create_new_restaurant">Create new restaurant</string>
    <string name="fill_in_the_balnks">Fill in the blanks</string>
    <string name="delivery_hours">Delivery hours</string>
    <string name="open_hours">Open hours</string>
    <string name="subscription_price_is_not_correct">Subscription price is not correct</string>
    <string name="last_day_of_subscription">Last day of subscription</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="is_subscription_active">"Is subscription active: "</string>
    <string name="subscription_since">Subscription since:</string>
    <string name="do_you_want_buy_additional_month_of_sub">Do you want buy additional month of subscription?</string>
    <string name="menu_is_not_avaliable_yet">Menu is not avaliable yet</string>
    <string name="saved">Saved</string>
    <string name="selected_option">Selected option</string>
    <string name="you_have_no_susbscription_for_this_day">You have no subscription for this day</string>
    <string name="restaurant_token">Restaurant token</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="success">Success</string>
    <string name="message">Message</string>
    <string name="restaurant_manaegement">Restaurant management</string>
    <string name="register_as_client">Register as client</string>
    <string name="register_as_restaurant">Register as restaurant</string>
    <string name="log_in">Log in</string>

</resources>