<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".views.authentication.AuthenticationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/card_background"
        android:elevation="@dimen/elevation"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/a_loginButton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="@+id/a_createNewAccountButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/a_createNewAccountButton" />

        <EditText
            android:id="@+id/a_inputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/a_inputLogin"
            app:layout_constraintStart_toStartOf="@+id/a_inputLogin"
            app:layout_constraintTop_toBottomOf="@+id/a_inputLogin" />

        <TextView
            android:id="@+id/a_createNewAccountButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="14dp"
            android:text="@string/create_new_account"
            android:textAllCaps="true"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/a_inputPassword"
            app:layout_constraintTop_toBottomOf="@+id/a_inputPassword" />

        <EditText
            android:id="@+id/a_inputLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:paddingStart="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/a_error_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pleaseEnterValidLoginDetails"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/a_inputLogin"
            app:layout_constraintStart_toStartOf="@+id/a_inputLogin"
            app:layout_constraintTop_toBottomOf="@+id/a_createNewAccountButton" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/log_in"
            android:textColor="@color/primary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation"
        android:shadowColor="@color/black"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>