<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:paddingStart="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/inputLogin"
        app:layout_constraintStart_toStartOf="@+id/inputLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputLogin" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/button"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <TextView
        android:id="@+id/createNewAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:text="@string/create_new_account"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toTopOf="@+id/loginButton" />
</androidx.constraintlayout.widget.ConstraintLayout>